# resource-pack

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
resource_pack/: __init__.py  functions.py  resource_manager.py
tests/: create_resources.py  export_resources.py  extract_resources.py  import_exported.py  load_resources.py  test.res  test_res.py
